# LearnOpenGL

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: Camera.h  Shader.h  main.cpp
src/shaders/: basicshader.vs  coordinateshader.vs  transformshader.vs
